# inz

./: PODSUMOWANIE.txt  TODO.txt  info.yout.txt  new 1.txt
MixedProj/: 01.MPL ------------------------ FC.txt  02.CNN ----------------- CNN+FC.txt  03.CNN.Face ------------ CNN+FC.txt  04.R-CNN.Face -------R - CNN+FC.txt  PATH.txt  TODO  history_ubuntu.txt  versions.txt
MixedProj/02.CNN.mnist/LionC++/other/Eig/: CMakeLists.txt  a.out  kernels.cu
_Prezentacja_/: PD_203 Prezentacja_obrona_pracy.pptx
cv/: CV!.indd  new_CV_2020_12.idml
images_to_tex/: .xdp-rys1.1.pdf.crdownload-ABMoBT  3d.ai  3drev.ai  3dreva.ai  conv2.ai  conv3.ai  conv4.ai  lang.ai  rys0_1.ai  rys1_1.ai  rys1_1a.ai  rys1_1b.ai  rys1_1d.ai  rys1_2.ai  rys1_2a.ai  rys1_2b.ai  rys1_3.ai  rys1_4.ai  rys1_5.ai  rys1_5a.ai  rys1_7.ai  rysunek1.1.eps  text_fascynacje.txt
info/: --ASM_INFO__  Bookmarks  Zespoły i kanały _ Heinzelman Piotr, i - porównanie języków w DNN _ Microsoft Teams.html  info_zakres_prac.txt  matlab_add.prj  tem
install/: 00.txt  Deep Learning Toolbox.prj  arch.install.txt  matlab.txt  nvidia  pycharm-community-2024.3.1.1.exe.win.txt  python.txt  python_arch_nvid.txt  root_hist.txt  user_his.txt  yt.txt
oldProj/: cRun  pyRun  versions.txt
rozmowa/: ile jest 2 razy 2 - Google Search.htm
short/: condaActivate  intellij  mat  matlab  ntfsmount  showTimeNow  sshOff  sshOn  winOff  winOn
tex/: EE-dyplom.bib  EE-dyplom.cls  EE-dyplom.tex  appendices.tex
tmp/: install.txt  inz_install_matlab_on_ArchLinux.txt  matlab.m
‎MixedProj/: 02.CNN ----------------- CNN+FC.txt  (+1 more)
(+1213 files in other folders)
